Primitive POS has been handled